[package]
authors = ["deciduously <ben@deciduously.com>"]
edition = "2021"
name = "blispr"
repository = "https://github.com/deciduously/blispr"
version = "0.0.2"

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
pretty_env_logger = "0.4"
rustyline = "9.1"

[dev-dependencies]
pretty_assertions = "1.2"